--- a/popup.html
+++ b/popup.html
@@ -49,60 +49,60 @@ a div:hover {
             <div id='parent_div_1'>
                 <a target="_blank" href="https://www.google.com" style="color: black;">
                 <div class='child_div_1'>
-                    <img src=".icon/googlesearch_icon.png" alt="Google Search" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px;"><h4>Search</h4>
+                    <img src="_icon/googlesearch_icon.png" alt="Google Search" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px;"><h4>Search</h4>
                 </div>
                 </a>
                 <a target="_blank" href="https://maps.google.co.uk/maps?hl=en&tab=wl" style="color: black;">
                 <div class='child_div_2'>
-                    <img src=".icon/googlemaps_icon.png" alt="Google Maps" style="width:26px; height:35px; margin-right:23px; margin-left:15px; vertical-align: 25px;"><h4>Maps</h4>
+                    <img src="_icon/googlemaps_icon.png" alt="Google Maps" style="width:26px; height:35px; margin-right:23px; margin-left:15px; vertical-align: 25px;"><h4>Maps</h4>
                 </div>
                 </a>
               </div>
               <div id='parent_div_2'>
                 <a target="_blank" href="https://www.youtube.com/" style="color: black;">
                 <div class='child_div_1'>
-                    <img src=".icon/googleyoutube_icon.png" alt="Youtube" style="width:42px; height:35px; margin-right:8px; margin-left:15px; vertical-align: 25px; margin-top: 5px;"><h4>Youtube</h4>
+                    <img src="_icon/googleyoutube_icon.png" alt="Youtube" style="width:42px; height:35px; margin-right:8px; margin-left:15px; vertical-align: 25px; margin-top: 5px;"><h4>Youtube</h4>
                 </div>
                 </a>
                 <a target="_blank" href="https://mail.google.com/mail/?tab=wm" style="color: black;">
                 <div class='child_div_2'>
-                    <img src=".icon/googlegmail_icon.png" alt="Gmail" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px;"><h4>Gmail</h4>
+                    <img src="_icon/googlegmail_icon.png" alt="Gmail" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px;"><h4>Gmail</h4>
                 </div>
                 </a>
               </div>
               <div id='parent_div_3'>
                 <a target="_blank" href="https://drive.google.com/?tab=wo" style="color: black;">
                 <div class='child_div_1'>
-                    <img src=".icon/googledrive_icon.png" alt="Google Drive" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px;"><h4>Drive</h4>
+                    <img src="_icon/googledrive_icon.png" alt="Google Drive" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px;"><h4>Drive</h4>
                 </div>
                 </a>
                 <a target="_blank" href="https://translate.google.co.uk/?hl=en&tab=wT" style="color: black;">
                 <div class='child_div_2'>
-                    <img src=".icon/googletranslate_icon.png" alt="Google Translate" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px; margin-top: 1px;"><h4>Translate</h4>
+                    <img src="_icon/googletranslate_icon.png" alt="Google Translate" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px; margin-top: 1px;"><h4>Translate</h4>
                 </div>
                 </a>
               </div>
               <div id='parent_div_4'>
                 <a target="_blank" href="https://docs.google.com/document/?usp=docs_alc" style="color: black;">
                 <div class='child_div_1'>
-                    <img src=".icon/googledocs_icon.png" alt="Google Docs" style="width:38px; height:38px; margin-right:13px; margin-left:15px; vertical-align: 25px;"><h4>Docs</h4>
+                    <img src="_icon/googledocs_icon.png" alt="Google Docs" style="width:38px; height:38px; margin-right:13px; margin-left:15px; vertical-align: 25px;"><h4>Docs</h4>
                 </div>
                 </a>
                 <a target="_blank" href="https://docs.google.com/spreadsheets/?usp=sheets_alc" style="color: black;">
                 <div class='child_div_2'>
-                    <img src=".icon/googlesheets_icon.png" alt="Google Sheets" style="width:65px; height:59px; margin-right: 2px; margin-left: -1px; vertical-align: 25px; margin-top: -5px;"><h4>Sheets</h4>
+                    <img src="_icon/googlesheets_icon.png" alt="Google Sheets" style="width:65px; height:59px; margin-right: 2px; margin-left: -1px; vertical-align: 25px; margin-top: -5px;"><h4>Sheets</h4>
                 </div>
                 </a>
               </div>
               <div id='parent_div_5'>
                 <a target="_blank" href="https://docs.google.com/presentation/?usp=slides_alc" style="color: black;">
                 <div class='child_div_1'>
-                    <img src=".icon/googleslides_icon.png" alt="Google Slides" style="width:32px; height:32px; margin-right:16px; margin-left:18px; vertical-align: 25px; margin-top: 2px;"><h4>Slides</h4>
+                    <img src="_icon/googleslides_icon.png" alt="Google Slides" style="width:32px; height:32px; margin-right:16px; margin-left:18px; vertical-align: 25px; margin-top: 2px;"><h4>Slides</h4>
                 </div>
                 </a>
                 <a target="_blank" href="https://earth.google.com/web/" style="color: black;">
                 <div class='child_div_2'>
-                    <img src=".icon/googleearth_icon.png" alt="Google Earth" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px;"><h4>Earth</h4>
+                    <img src="_icon/googleearth_icon.png" alt="Google Earth" style="width:35px; height:35px; margin-right:15px; margin-left:15px; vertical-align: 25px;"><h4>Earth</h4>
                 </div>
                 </a>
               </div>
