--- a/popup.html
+++ b/popup.html
@@ -7,7 +7,11 @@
 <body>
     <div>
         <div>
-            <h2>Apps</h2>
+            <ul>
+                <li><a>Apps</a></li>
+                <li><a>Settings</a></li>
+                <li><a>Debug</a></li>
+            </ul>
             <div id='parent_div_1'>
                 <a target="_blank" href="https://www.google.com" style="color: black;">
                 <div class='child_div_1'>
