--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,8 @@
 </head>
 <body>
     <div>
+        <div>
+            </ul>
             <div id='parent_div_1'>
                 <a target="_blank" href="https://www.google.com" style="color: black;">
                 <div class='child_div_1'>
