--- a/popup.html
+++ b/popup.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <title>GoogleOpen</title>
-    <link rel="stylesheet" href="style.css"
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div>
